<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/edt.b.Stückzahlerfassung"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edt.b.PrüfenRohmaterial"
        android:layout_marginBottom="56dp"
        android:text="@string/st_ckzahlerfassung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edt.b.PrüfenRohmaterial"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edt.b.AusbuchenRohmaterial"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="55dp"
        android:text="@string/pr_fen_rohmaterial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt.b.Stückzahlerfassung" />

    <Button
        android:id="@+id/edt.b.AusbuchenRohmaterial"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="442dp"
        android:text="@string/ausbuchenrohmaterial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt.b.PrüfenRohmaterial" />

    <Button
        android:id="@+id/edt.b.Betriebsstundenerfassung"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="397dp"
        android:text="@string/betriebsstundenerfassung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt.b.AusbuchenRohmaterial" />

    <Button
        android:id="@+id/edt.b.Energieverbrauchserfassung"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="351dp"
        android:text="@string/energieverbrauchserfassung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt.b.Betriebsstundenerfassung" />

    <Button
        android:id="@+id/edt.b.MaschinenausfallWerkzeugwechsel"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="305dp"
        android:text="@string/maschinenausfall_werkzeugwechsel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt.b.Energieverbrauchserfassung" />

    <Button
        android:id="@+id/edt.b.MaschineneinrichtungSpannmittel"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="252dp"
        android:text="@string/maschineneinrichtung_spannmittel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt.b.MaschinenausfallWerkzeugwechsel" />

    <Button
        android:id="@+id/edt.b.Administration"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="154dp"
        android:text="@string/administration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt.b.MaschineneinrichtungSpannmittel" />

    <Button
        android:id="@+id/edt.b.Abmelden"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edt.b.Administration"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="65dp"
        android:text="@string/abmelden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt.b.Administration" />
</RelativeLayout>